--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -471,7 +471,7 @@
                         $makeZodiac 
 
                         <!-- First Circle -->
-                        <circle $c1 style="$c1style" />
+                        $first_circle
 
                         <!-- Second Circle -->
                         <circle $c2 style="$c2style" />
