Charts: Refactory and start adding meta data directly in chart

--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -3,6 +3,7 @@
 <svg
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
+    xmlns:kr="https://www.kerykeion.net/"
     width="$svgWidth"
     height="$svgHeight"
     viewBox="$viewbox"
