--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -4,8 +4,8 @@
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     xmlns:kr="https://www.kerykeion.net/"
-    width="$svgWidth"
-    height="$svgHeight"
+    width="100%"
+    height="100%"
     viewBox="$viewbox"
     preserveAspectRatio="xMidYMid"
 >
