--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -31,27 +31,7 @@
 
         <!-- Lunar Phase -->
         <g kr:node="Lunar_Phase" transform="translate(20,518)">
-            <g transform="rotate($lunar_phase_rotate 20 10)">
-                <defs>
-                    <clipPath id="cut-off-circle">
-                        <circle cx="20" cy="10" r="10" />
-                    </clipPath>
-                </defs>
-                <circle cx="20" cy="10" r="10" style="fill: $lunar_phase_bg" />
-                <circle
-                    cx="$lunar_phase_cx"
-                    cy="10"
-                    r="$lunar_phase_r"
-                    style="fill: $lunar_phase_fg"
-                    clip-path="url(#cut-off-circle)"
-                />
-                <circle
-                    cx="20"
-                    cy="10"
-                    r="10"
-                    style="fill: none; stroke: $lunar_phase_outline; stroke-width: 0.5px; stroke-opacity: 0.5"
-                />
-            </g>
+            $moon_phase
         </g>
 
         <g kr:node="Main_Content" transform="translate(50,50)">
@@ -549,5 +529,12 @@
                 style="fill: $paper_color_0"
             />
         </symbol>
+
+        <!-- Moon Phases Cut Off Circle -->
+        <defs>
+            <clipPath id="moonPhaseCutOffCircle">
+                <circle cx="20" cy="10" r="10" />
+            </clipPath>
+        </defs>
     </defs>
 </svg>
