CSS Color Variables
Now all the chart colors are managed by CSS variables.
This change opens the way for more customizations and
for the future refactory of all the color system.

--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -10,6 +10,10 @@
     preserveAspectRatio="xMidYMid"
 >
     <title>$stringTitle | Kerykeion</title>
+
+    <!-- Colors -->
+    $color_style_tag
+
     <!--- Main Chart -->
     <g kr:node="Main_Chart">
 
@@ -29,73 +33,73 @@
             <text x="20" y="508" style="fill: $paper_color_0; font-size: 10px">$bottomLeft4</text>
         </g>
 
-        <!-- Lunar Phase -->
+            <!-- Lunar Phase -->
         <g kr:node="Lunar_Phase" transform="translate(20,518)">
             $moon_phase
         </g>
 
         <g kr:node="Main_Content" transform="translate(50,50)">
-            <!-- Zodiac -->
+                <!-- Zodiac -->
             <g kr:node="Zodiac">
                 $makeZodiac 
             </g>
 
-            <!-- First Circle -->
+                <!-- First Circle -->
             <g kr:node="First_Circle">
                 $first_circle
             </g>
 
-            <!-- Second Circle -->
+                <!-- Second Circle -->
             <g kr:node="Second_Circle">
                 $second_circle
             </g>
 
-            <!-- Third Circle -->
+                <!-- Third Circle -->
             <g kr:node="Third_Circle">
                 $third_circle
             </g>
 
-            <!-- Transit_Ring -->
+                <!-- Transit_Ring -->
             <g kr:node="Transint_Ring">
                 $transitRing 
             </g>
 
-            <!-- Degree Ring -->
+                <!-- Degree Ring -->
             <g kr:node="Degree_Ring">
                 $degreeRing
             </g>
 
-            <!-- Houses -->
+                <!-- Houses -->
             <g kr:node="Houses_Wheel">
                 $makeHouses
             </g>
 
-            <!-- Planets -->
+                <!-- Planets -->
             <g kr:node="Planets_Wheel">
                 $makePlanets
             </g>
 
-            <!-- Aspects -->
+                <!-- Aspects -->
             <g kr:node="Aspects_Wheel">
                 $makeAspects
             </g>
 
-            <!-- AspectGrid -->
+                <!-- AspectGrid -->
             <g kr:node="Aspect_Grid">
                 $makeAspectGrid
             </g>
 
-            <!-- Elements -->
+                <!-- Elements -->
             <g kr:node="Elements_Percentages">
                 $elements_percentages 
             </g>
 
-            <!-- Planet Grid -->
+                <!-- Planet Grid -->
             <g kr:node="Planet_Grid">
                 $makePlanetGrid
             </g>
 
-            <!-- Houses Grid -->
+                <!-- Houses Grid -->
             <g kr:node="Houses_Grid">
                 $makeHousesGrid
             </g>
@@ -103,9 +107,9 @@
         
     </g>
 
-    <!-- Symbols Definitions -->
+        <!-- Symbols Definitions -->
     <defs>
-        <!-- Planets (24x24) -->
+            <!-- Planets (24x24) -->
         <symbol id="Sun">
             <g transform="translate(1,4)">
                 <circle cx="10" cy="10" r="9"
@@ -251,7 +255,7 @@
         <symbol id="Fourth_House">
             <text y="20" style="font-size: 22px; fill: $planets_color_15">Ic</text>
         </symbol>
-        <!-- Zodiac -->
+            <!-- Zodiac -->
         <symbol id="Ari">
             <path
                 d="M 14.833536,31 C 14.832186,29.72825 14.845936,28.45584 14.780346,27.18523 C 14.640926,24.23046 14.271927,21.28979 13.761657,18.3776 C 13.321987,15.91911 12.787787,13.46983 11.990517,11.10075 C 11.530267,9.76243 10.992887,8.44912 10.357087,7.1849 C 9.7764065,6.054 9.1143465,4.94296 8.2160065,4.03494 C 7.6282465,3.4465 6.9007265,2.94535 6.0649765,2.81624 C 5.3237266,2.70142 4.5304666,2.87571 3.9356966,3.34384 C 3.2136565,3.90519 2.7654365,4.75625 2.5438365,5.63289 C 2.3053765,6.59995 2.2959765,7.61358 2.4292165,8.5973 C 2.6464465,10.15587 3.2689665,11.63258 4.0815466,12.96908 C 3.2924465,12.96908 2.5033465,12.96908 1.7142465,12.96908 C 0.89724651,11.48481 0.25799651,9.87299 0.060256514,8.17899 C -0.071203486,7.00695 0.0037165138,5.79903 0.37149651,4.67421 C 0.76442651,3.47499 1.5195865,2.3932 2.5232565,1.6304 C 3.2809665,1.05478 4.2059366,0.71268 5.1519466,0.63781 C 6.1938265,0.54496 7.2610465,0.74619 8.1909265,1.22976 C 9.3998665,1.85021 10.363677,2.85944 11.145277,3.95766 C 12.190347,5.44147 12.965067,7.10101 13.584287,8.80382 C 14.630766,11.7176 15.212626,14.77861 15.575146,17.84795 C 15.664836,18.61648 15.739556,19.38675 15.801446,20.15803 C 15.933606,20.15803 16.065776,20.15803 16.197936,20.15803 C 16.431516,16.78332 16.919066,13.40761 17.920236,10.17029 C 18.536746,8.19886 19.343216,6.2733 20.460106,4.53209 C 21.232966,3.34246 22.178396,2.22691 23.393236,1.47473 C 24.303946,0.906 25.375406,0.59315 26.449836,0.61744 C 27.406076,0.6265 28.366336,0.88414 29.173386,1.40571 C 29.918276,1.88417 30.536726,2.54825 31.007306,3.29688 C 31.640376,4.30981 31.942786,5.5036 31.990526,6.69149 C 32.064366,8.24898 31.700306,9.79841 31.118136,11.23409 C 30.878056,11.82774 30.600746,12.40584 30.296796,12.96908 C 29.503806,12.96908 28.710826,12.96908 27.917836,12.96908 C 28.695646,11.56825 29.330906,10.06044 29.565756,8.46485 C 29.705436,7.49053 29.689976,6.48739 29.469736,5.52616 C 29.266586,4.67296 28.870956,3.83354 28.201276,3.25079 C 27.718386,2.82263 27.078466,2.59021 26.436216,2.58446 C 25.680306,2.56059 24.950086,2.87303 24.358336,3.32879 C 23.494556,3.99307 22.844986,4.89198 22.282956,5.81679 C 21.451756,7.21072 20.811436,8.71018 20.250396,10.23124 C 19.437586,12.49802 18.893326,14.85166 18.440286,17.21432 C 17.839016,20.40325 17.413216,23.6291 17.246136,26.8715 C 17.183796,28.01857 17.173966,29.16745 17.177516,30.31595 C 17.177516,30.54397 17.177516,30.77198 17.177516,31 C 16.396186,31 15.614856,31 14.833536,31 z"
@@ -324,7 +328,7 @@
                 style="fill: $zodiac_color_11"
             />
         </symbol>
-        <!-- Aspects 12x12 -->
+            <!-- Aspects 12x12 -->
         <symbol id="orb0">
             <path
                 d="M 6.0697539,7.3234852 C 6.0697539,8.7354882 4.9173651,9.8801442 3.4958214,9.8801442 C 2.0742775,9.8801442 0.92188857,8.7354882 0.92188857,7.3234852 C 0.92188857,5.9114822 2.0742775,4.7668272 3.4958214,4.7668272 C 4.9173651,4.7668272 6.0697539,5.9114822 6.0697539,7.3234852 L 6.0697539,7.3234852 z M 5.6252609,5.2113202 C 10.07019,0.76639018 10.07019,0.76639018 10.07019,0.76639018"
@@ -522,7 +526,7 @@
                         "
             />
         </symbol>
-        <!-- retrograde symbol (12x12) -->
+            <!-- retrograde symbol (12x12) -->
         <symbol id="retrograde">
             <path
                 d="M 5.1695089,0.06514307 C 3.7597989,0.21597207 2.3317349,0.33149007 0.91358191,0.23513107 C 1.5490329,0.81902207 1.4024849,1.7100011 1.4228379,2.4700431 C 1.4174159,5.2174481 1.4337709,7.9652731 1.4145019,10.712411 C 1.5149409,11.170848 0.96799791,11.834471 0.90284691,11.964302 C 1.9976889,11.964302 3.0925299,11.964302 4.1873719,11.964302 C 3.6018439,11.577975 3.6510929,10.820034 3.6417399,10.219838 C 3.6417399,8.8974601 3.6417399,7.5750831 3.6417399,6.2527051 C 4.5026259,7.3972911 5.3635109,8.5418771 6.2243959,9.6864631 C 5.6030699,10.013049 5.0721439,10.497354 4.3692489,10.672393 C 4.5753769,10.955706 4.7815039,11.23902 4.9876319,11.522333 C 5.4939219,11.018036 6.1426389,10.672218 6.7336529,10.264421 C 7.3897039,11.216912 8.4697479,12.048392 9.7419399,12.011579 C 10.143603,12.002199 11.067691,11.885824 11.063775,11.676075 C 9.9004969,11.128054 9.0018849,10.179085 8.4069229,9.1085041 C 8.9670439,8.6756641 9.5056289,8.1870051 10.177382,7.9086731 C 10.419881,7.8661501 10.031668,7.5763571 9.9815039,7.4190951 C 9.7896089,6.9062931 9.6214379,7.4694661 9.2950839,7.6239451 C 8.8453989,7.8927681 8.3078839,8.3646011 7.8614459,8.4454351 C 7.2551369,7.5898671 6.6488279,6.7342991 6.0425199,5.8787321 C 7.2451939,5.6174351 8.5827839,5.0853891 9.0704409,3.9368981 C 9.4063139,3.1120211 9.2637339,2.1667931 8.9107889,1.3734701 C 8.1684869,0.41091107 6.8692049,-0.072451931 5.6199729,0.02510607 C 5.4693279,0.03287207 5.3190519,0.04651007 5.1695089,0.06514307 L 5.1695089,0.06514307 z M 4.0054949,0.98307806 C 4.9274209,0.87516007 6.0752839,0.95659406 6.6119469,1.7769821 C 7.1995489,2.7436231 6.9771779,4.0277241 6.2388859,4.8694001 C 5.6053289,5.5549031 4.5521059,5.6780771 3.6417399,5.5727531 C 3.6417399,4.0655271 3.6417399,2.5583001 3.6417399,1.0510731 C 3.7629919,1.0284081 3.8842429,1.0057431 4.0054949,0.98307806 z"
