--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -100,7 +100,12 @@ OpenAstro.org -->
 
             <!-- Elements -->
             <g kr:node="Elements_Percentages">
-                $elements_percentages
+                <g transform="translate(-30,79)">
+                <text y="0" style="fill: var(--kerykeion-chart-color-fire-percentage); font-size: 10px;">$fire_string</text>
+                <text y="12" style="fill: var(--kerykeion-chart-color-earth-percentage); font-size: 10px;">$earth_string</text>
+                <text y="24" style="fill: var(--kerykeion-chart-color-air-percentage); font-size: 10px;">$air_string</text>
+                <text y="36" style="fill: var(--kerykeion-chart-color-water-percentage); font-size: 10px;">$water_string</text>
+                </g>"
             </g>
 
             <!-- Houses_And_Planets_Grid -->
