--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -41,7 +41,16 @@ OpenAstro.org -->
 
         <!-- Lunar Phase -->
         <g kr:node="Lunar_Phase" transform="translate(20,518)">
-            $moon_phase
+            <g transform="rotate($lunar_phase_rotate 20 10)">
+                <defs>
+                    <clipPath id="moonPhaseCutOffCircle">
+                    <circle cx="20" cy="10" r="10" />
+                    </clipPath>
+                </defs>
+                <circle cx="20" cy="10" r="10" style="fill: var(--kerykeion-chart-color-lunar-phase-0)" />
+                <circle cx="$lunar_phase_circle_center_x" cy="10" r="$lunar_phase_circle_radius" style="fill: var(--kerykeion-chart-color-lunar-phase-1)" clip-path="url(#moonPhaseCutOffCircle)" />
+                <circle cx="20" cy="10" r="10" style="fill: none; stroke: var(--kerykeion-chart-color-lunar-phase-0); stroke-width: 0.5px; stroke-opacity: 0.5" />
+            </g>
         </g>
 
         <g kr:node="Main_Content" transform="translate(50,50)">
