--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -94,7 +94,7 @@ OpenAstro.org -->
             </g>
 
             <!-- AspectGrid -->
-            <g kr:node="Aspect_Grid" transform="translate(526,273)">
+            <g kr:node="Aspect_Grid">
                 $makeAspectGrid
             </g>
 
