--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -128,6 +128,11 @@ OpenAstro.org -->
                 <g kr:node="Houses_Grid">
                     $makeHousesGrid
                 </g>
+
+                <!-- House Comparison Grid -->
+                <g kr:node="House_Comparison_Table">
+                    $makeHouseComparisonGrid
+                </g>
             </g>
         </g>
 
