--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -46,7 +46,7 @@ OpenAstro.org -->
 
         <g kr:node="Main_Content" transform="translate(50,50)">
             <!-- Full Wheel -->
-            <g kr:node="Full_Wheel" transform="translate(30,0)">
+            <g kr:node="Full_Wheel" transform="translate(50,0)">
                 <!-- Zodiac -->
                 <g kr:node="Zodiac">
                     $makeZodiac
@@ -100,12 +100,22 @@ OpenAstro.org -->
 
             <!-- Elements -->
             <g kr:node="Elements_Percentages">
-                <g transform="translate(-30,79)">
+                <g transform="translate(-30,80)">
                 <text y="0" style="fill: $paper_color_0; font-size: 10px;">$elements_string</text>
-                <text y="12" style="fill: var(--kerykeion-chart-color-fire-percentage); font-size: 10px;">$fire_string</text>
-                <text y="24" style="fill: var(--kerykeion-chart-color-earth-percentage); font-size: 10px;">$earth_string</text>
-                <text y="36" style="fill: var(--kerykeion-chart-color-air-percentage); font-size: 10px;">$air_string</text>
-                <text y="48" style="fill: var(--kerykeion-chart-color-water-percentage); font-size: 10px;">$water_string</text>
+                <text y="14" style="fill: var(--kerykeion-chart-color-fire-percentage); font-size: 10px;">$fire_string</text>
+                <text y="26" style="fill: var(--kerykeion-chart-color-earth-percentage); font-size: 10px;">$earth_string</text>
+                <text y="38" style="fill: var(--kerykeion-chart-color-air-percentage); font-size: 10px;">$air_string</text>
+                <text y="50" style="fill: var(--kerykeion-chart-color-water-percentage); font-size: 10px;">$water_string</text>
+                </g>"
+            </g>
+
+            <!-- Qualities -->
+            <g kr:node="Qualities_Percentages">
+                <g transform="translate(-30,150)">
+                <text y="0" style="fill: $paper_color_0; font-size: 10px;">$qualities_string</text>
+                <text y="14" style="fill: var(--kerykeion-chart-color-cardinal-percentage); font-size: 10px;">$cardinal_string</text>
+                <text y="26" style="fill: var(--kerykeion-chart-color-fixed-percentage); font-size: 10px;">$fixed_string</text>
+                <text y="38" style="fill: var(--kerykeion-chart-color-mutable-percentage); font-size: 10px;">$mutable_string</text>
                 </g>"
             </g>
 
